welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:3: error: missing arguments for method sleepIn in class sleepIn;
follow this method with `_' if you want to treat it as a partially applied function
	if (sleepIn()=true)
            ^sleepIn:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if (sleepIn()=true)
        ^